--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -8,5 +8,19 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=127.0.0.1:5432;Username=postgres;Password=root123;Database=RestTest;"
   },
+  "service": {
+    "name": "resttest"
+  },
+  "aws": {
+    "s3": {
+      "BucketName": "rvstaskstorage"
+    },
+    "parameterStore": {
+      "keys": [
+        "LocalFileLocation"
+      ],
+      "region": "eu-central-1"
+    }
+  },
   "AllowedHosts": "*"
 }
