--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -16,11 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ResourceItems\EventHandlers\" />
   </ItemGroup>
 
 </Project>
