--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -20,6 +20,11 @@
         "LocalFileLocation"
       ],
       "region": "eu-central-1"
+    },
+    "cognito": {
+      "region": "eu-central-1",
+      "UserPoolClientId": "7slpl4ipok0602vc42qa33mj88",
+      "UserPoolId": "eu-central-1_cfEcKo2xx"
     }
   },
   "AllowedHosts": "*"
