--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="MediatR" Version="12.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+  </ItemGroup>
+
 </Project>
