--- a/development/unit-buildspec.yml
+++ b/development/unit-buildspec.yml
@@ -15,7 +15,7 @@ phases:
   build:
     commands:
       - echo "Running unit-test.sh"
-      - ./unit-tests.sh  
+      - ./development/unit-tests.sh
       
   post_build: 
     commands:
