--- a/development/unit-buildspec.yml
+++ b/development/unit-buildspec.yml
@@ -15,6 +15,7 @@ phases:
   build:
     commands:
       - echo "Running unit-test.sh"
+      - chmod -R u+x /development
       - ./development/unit-tests.sh
       
   post_build: 
