script mod .net

--- a/development/unit-buildspec.yml
+++ b/development/unit-buildspec.yml
@@ -7,6 +7,9 @@ env:
     AWS_DEFAULT_REGION: "eu-central-1"
 
 phases:
+  install:
+    commands:
+      - /usr/local/bin/dotnet-install.sh --channel STS
 
   pre_build:
     commands:
