--- a/development/integration-test2.yml
+++ b/development/integration-test2.yml
@@ -21,9 +21,9 @@ phases:
     commands:
       - echo "Running Integration without script build"
       - ls -la
-      - find ${START_DIR} -type d -name "*${TARGET_TEST}Tests*" | while read -r testDir; do
-        echo "$testDir"
-        dotnet test "$testDir" --collect:"XPlat Code Coverage"
+      - find ${START_DIR} -type d -name "*${TARGET_TEST}Tests*" | while read -r testDir; do && \
+        echo "$testDir" && \
+        dotnet test "$testDir" --collect:"XPlat Code Coverage" && \
         done
       
   post_build: 
