--- a/development/integration-test.yml
+++ b/development/integration-test.yml
@@ -2,11 +2,9 @@ version: 0.2
 env:
   variables:
     #VERSION: "1.0"
-    IMAGE_REPO_NAME: "payment"
+    #IMAGE_REPO_NAME: "payment"
     AWS_ACCOUNT_ID: "877859816718"
     AWS_DEFAULT_REGION: "eu-central-1"
-    START_DIR: "tests"
-    TARGET_TEST: "Ingertaion"
 
 phases:
   install:
@@ -22,7 +20,7 @@ phases:
       - echo "Running unit-test.sh"
       - chmod -R u+x development
       - ls -la
-      - ./development/integration-tests.sh
+      - ./development/integration-test.sh
       
   post_build: 
     commands:
