--- a/development/docker-build.yml
+++ b/development/docker-build.yml
@@ -22,7 +22,7 @@ phases:
   
   build:
     commands:
-      - $patch=$((patch+1))
+      - patch=$((patch+1))
       - image_tag=$version.$patch
       - cd src/Web/
       - pwd
