--- a/development/docker-build.yml
+++ b/development/docker-build.yml
@@ -7,8 +7,8 @@ env:
     AWS_DEFAULT_REGION: "eu-central-1"
     image_tag: "0"
   parameter-store:
-    version: "image_tag_v"
-    patch:   "image_tag_p"
+    version: image_tag_v
+    patch:   image_tag_p
     
 
 phases:
