--- a/development/docker-build.yml
+++ b/development/docker-build.yml
@@ -25,7 +25,7 @@ phases:
   build:
     commands:
       - tag_patch=$((tag_patch+1))
-      - image_tag=$tag_version.$tag_patch
+      - image_tag="$tag_version.$tag_patch"
       - echo "IMAGE TAG IS " $image_tag
       - cd src/Web/
       - pwd
@@ -40,7 +40,7 @@ phases:
       - echo Docker tag
       - docker tag $IMAGE_REPO_NAME:$image_tag $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$image_tag
       - echo Pushing the Docker image...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$image_tag
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$tag_patch
       #store new image tag number in ssm 
       - aws ssm put-parameter --name image_tag_p --type String --value ${image_tag} --overwrite      
 
