--- a/development/docker-build.yml
+++ b/development/docker-build.yml
@@ -26,11 +26,10 @@ phases:
     commands:
       - tag_patch=$((tag_patch+1))
       - image_tag="$tag_version.$tag_patch"
-      - echo "IMAGE TAG IS " $image_tag
-      - cd src/Web/
+      - echo "IMAGE TAG IS  ${image_tag}"
       - pwd
       - ls -la
-      - docker build -t $IMAGE_REPO_NAME:$tag_patch .
+      - docker build -t $IMAGE_REPO_NAME:$tag_patch -f Web/Dockerfile
       - printf '[{"name":"$IMAGE_REPO_NAME","imageUri":"%s"}]'  $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$image_tag  > imageDetail.json
       - cat imageDetail.json
 
@@ -42,7 +41,7 @@ phases:
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$tag_patch
       #store new image tag number in ssm 
-      - aws ssm put-parameter --name image_tag_p --type String --value ${image_tag} --overwrite      
+      - aws ssm put-parameter --name image_tag_p --type String --value ${tag_patch} --overwrite      
 
 artifacts:
     files: 
