image build edited11

--- a/src/Web/Dockerfile
+++ b/src/Web/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /src
 COPY ["Web/Web.csproj", "Web/"]
 RUN dotnet restore "Web/Web.csproj"
 COPY . .
-WORKDIR "/src/Web"
+WORKDIR /src/Web
 RUN dotnet build "Web.csproj" -c Release -o /app/build
 
 FROM build AS publish
