--- a/src/Web/Dockerfile
+++ b/src/Web/Dockerfile
@@ -7,7 +7,7 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["Web/Web.csproj", "Web/"]
+COPY ["/Web/Web.csproj", "Web/"] 
 RUN dotnet restore "Web/Web.csproj"
 COPY . .
 WORKDIR /src/Web
