--- a/development/docker-build.yml
+++ b/development/docker-build.yml
@@ -28,8 +28,9 @@ phases:
       - image_tag="$tag_version.$tag_patch"
       - echo "IMAGE TAG IS  ${image_tag}"
       - pwd
+      - cd src/
       - ls -la
-      - docker build -t $IMAGE_REPO_NAME:$tag_patch -f src/Web/Dockerfile .
+      - docker build -t $IMAGE_REPO_NAME:$tag_patch -f Web/Dockerfile .
       - printf '[{"name":"$IMAGE_REPO_NAME","imageUri":"%s"}]'  $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$image_tag  > imageDetail.json
       - cat imageDetail.json
 
