--- a/development/docker-build.yml
+++ b/development/docker-build.yml
@@ -40,7 +40,7 @@ phases:
       - echo Docker tag
       - docker tag $IMAGE_REPO_NAME:$image_tag $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$image_tag
       - echo Pushing the Docker image...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$tag_patch
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$tag_tag
       #store new image tag number in ssm 
       - aws ssm put-parameter --name image_tag_p --type String --value ${tag_patch} --overwrite      
 
