--- a/development/docker-build.yml
+++ b/development/docker-build.yml
@@ -25,22 +25,22 @@ phases:
   build:
     commands:
       - tag_patch=$((tag_patch+1))
-      - image_tag="$tag_version.$tag_patch"
+      - image_tag=$tag_version.$tag_patch
       - echo "IMAGE TAG IS  ${image_tag}"
       - pwd
       - cd src/
       - ls -la
-      - docker build -t $IMAGE_REPO_NAME:$image_tag -f Web/Dockerfile .
-      - printf '[{"name":"$IMAGE_REPO_NAME","imageUri":"%s"}]'  $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$image_tag  > imageDetail.json
+      - docker build -t $IMAGE_REPO_NAME:$tag_patch -f Web/Dockerfile .
+      - printf '[{"name":"$IMAGE_REPO_NAME","imageUri":"%s"}]'  $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$tag_patch  > imageDetail.json
       - cat imageDetail.json
 
   post_build: 
     commands:
       - echo "Docker build complited"          
       - echo Docker tag
-      - docker tag $IMAGE_REPO_NAME:$image_tag $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$image_tag
+      - docker tag $IMAGE_REPO_NAME:$image_tag $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$tag_patch
       - echo Pushing the Docker image...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$image_tag
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$tag_patch
       #store new image tag number in ssm 
       - aws ssm put-parameter --name image_tag_p --type String --value ${tag_patch} --overwrite      
 
