--- a/development/docker-build.yml
+++ b/development/docker-build.yml
@@ -38,7 +38,7 @@ phases:
     commands:
       - echo "Docker build complited"          
       - echo Docker tag
-      - docker tag $IMAGE_REPO_NAME:$image_tag $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$tag_patch
+      - docker tag $IMAGE_REPO_NAME:$tag_patch $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$tag_patch
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$tag_patch
       #store new image tag number in ssm 
