--- a/development/docker-build.yml
+++ b/development/docker-build.yml
@@ -7,7 +7,7 @@ env:
     AWS_DEFAULT_REGION: "eu-central-1"
     image_tag: "0"
   parameter-store:
-    tag_version: image_tag_v
+    TAG_VERSION: image_tag_v
     TAG_PATCH:   image_tag_p
     
 
@@ -24,8 +24,7 @@ phases:
   
   build:
     commands:
-      - TAG_PATCH=$((TAG_PATCH+1))
-      - pwd
+      - TAG_PATCH=$TAG_VERSION.$((TAG_PATCH+1))
       - cd src/
       - ls -la
       - docker build -t $IMAGE_REPO_NAME:$TAG_PATCH -f Web/Dockerfile .
