--- a/development/docker-build.yml
+++ b/development/docker-build.yml
@@ -20,7 +20,7 @@ phases:
     commands:
       - echo "Starting buidling docker image"
       - echo "Login in ecr"
-      - aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 877859816718.dkr.ecr.eu-central-1.amazonaws.com
   
   build:
     commands:
