--- a/src/Web/appsettings.Qa.json
+++ b/src/Web/appsettings.Qa.json
@@ -9,6 +9,15 @@
     "Key": {
       "Type": "Development"
     }
+  },
+  "service": {
+    "environment": "qa",
+    "corsPolicies": [
+      {
+        "allowedOrigins": [
+          "https://ratomir-task.rvs.cloudns.biz"
+        ]
+      }
+    ]
   }
-  
 }
