--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -10,6 +10,7 @@
   },
   "service": {
     "name": "resttest",
+    "environment":  "dev",
     "corsPolicies": [
       {
         "name": "default",
@@ -28,21 +29,15 @@
       "keys": [
         "LocalFileLocation"
       ],
-      "region": "eu-central-1",
-      "accessKeyId": "XXX",
-      "secretAccessKey": "XXX"
+      "region": "eu-central-1"
     },
     "cognito": {
       "region": "eu-central-1",
       "UserPoolClientId": "XXX",
-      "UserPoolId": "XXX",
-      "accessKeyId": "XXX",
-      "secretAccessKey": "XXX"
+      "UserPoolId": "XXX"
     },
     "dynamo": {
-      "region": "eu-central-1",
-      "accessKeyId": "XXX",
-      "secretAccessKey": "XXX"
+      "region": "eu-central-1"
     }
   },
   "AllowedHosts": "*"
