aws region update

--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -22,22 +22,20 @@
     ]
   },
   "aws": {
+    "defaultRegion":  "eu-central-1",
     "s3": {
       "BucketName": "rvstaskstorage"
     },
     "parameterStore": {
       "keys": [
         "LocalFileLocation"
-      ],
-      "region": "eu-central-1"
+      ]
     },
     "cognito": {
-      "region": "eu-central-1",
       "UserPoolClientId": "XXX",
       "UserPoolId": "XXX"
     },
     "dynamo": {
-      "region": "eu-central-1"
     }
   },
   "AllowedHosts": "*"
