--- a/.github/workflows/main_resttest_api.yml
+++ b/.github/workflows/main_resttest_api.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '7.x'
-          include-prerelease: true
+          dotnet-version: '8.x'
+          include-prerelease: false
 
       - name: Build with dotnet
         run: |
@@ -31,6 +31,11 @@ jobs:
         run: |
             cd .\development\
             .\unit-tests.bat
+
+      - name: Run integration tests
+        run: |
+            cd .\development\
+            .\integration-tests.bat
 
       - name: Security scan
         run: |
