--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Auth\Queries\**" />
+    <EmbeddedResource Remove="Auth\Queries\**" />
+    <None Remove="Auth\Queries\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Amazon.Extensions.CognitoAuthentication" Version="2.5.2" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="AWSSDK.CognitoIdentityProvider" Version="3.7.301.8" />
@@ -21,10 +27,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Auth\Queries\" />
   </ItemGroup>
 
 </Project>
